Remove unnecessary iteration of properties when removing K8s cluster. Add error logs if K8s cluster couldn't be removed